fixed spacing contact

--- a/contact_style.css
+++ b/contact_style.css
@@ -5,7 +5,8 @@
 }
 
 #contact {
-    margin: 30px;
+    margin-top: 10%;
+    margin-left: 15%;
 }
 
 .details {
